Bug 1609068 - Part 1: Replace map with unordered_map for more efficiently querying remapped game buttons. r=baku

Original author: Daosheng Mu

Differential Revision: https://phabricator.services.mozilla.com/D84917